kotlin.web.demo.test/testData/errors/errorsFromBackendJs.kt
fun nonConst(): String = "1"

fun test() {
    js(nonConst())
}